S10P22A402-307[fix]: status ING인 결제 조회 기능 수정 완료